added all the basic functions, but no testing yet

--- a/Python sensor/Sensor_testing.ipynb
+++ b/Python sensor/Sensor_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,6 +15,45 @@
     "import pandas as pd\n",
     "from nidaqmx.constants import AcquisitionType\n",
     "from pprint import pprint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'asdth1'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class test:\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "    def add(self):\n",
+    "        self.x = \"asdth1\"\n",
+    "x = test()\n",
+    "x.a = \"1\"\n",
+    "print(x.a)\n",
+    "x.a = 2\n",
+    "print(x.a)\n",
+    "x.add()\n",
+    "x.x"
    ]
   },
   {
@@ -46,10 +85,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import nidaqmx \n",
+    "import atiiaftt as ati\n",
+    "import numpy as np\n",
+    "from nidaqmx.stream_readers import AnalogMultiChannelReader\n",
+    "from nidaqmx.constants import AcquisitionType\n",
+    "\n",
     "class ftsensor:\n",
     "    def __avg(lst):\n",
     "        return sum(lst) / len(lst)\n",
@@ -99,14 +144,44 @@
     "    \n",
     "    def read_ft(self):\n",
     "        avg_voltage = self.read_avg_voltage()\n",
-    "        return self.sensor.convertToFt(avg_voltage)"
+    "        return self.sensor.convertToFt(avg_voltage)\n",
+    "    \n",
+    "    def set_bias(self, bias=None):\n",
+    "        if bias == None:\n",
+    "            self.bias = self.read_avg_voltage()\n",
+    "        else:\n",
+    "            self.bias = bias\n",
+    "        self.sensor.bias(self.bias)\n",
+    "    \n",
+    "    def set_sampling_freq(self, freq):\n",
+    "        self.sampling_freq = freq\n",
+    "        self.sample_number = self.sampling_freq//self.read_freq\n",
+    "\n",
+    "    def set_read_freq(self, freq):\n",
+    "        self.set_read_freq = freq\n",
+    "        self.sample_number = self.sampling_freq//self.read_freq"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "DaqError",
+     "evalue": "Device cannot be accessed.  Possible causes:\nDevice is no longer present in the system.\nDevice is not powered.\nDevice is powered, but was temporarily without power.\nDevice and/or chassis driver support may have been removed.\nDevice is damaged.\nEnsure the device is properly connected and turned on. Ensure the device and/or chassis is supported in the current version of the driver. Check the device's status in NI MAX. Turn the computer off and on again. If you suspect that the device is damaged, contact National Instruments at ni.com/support.\nDevice Specified: Dev1\n\nTask Name: _unnamedTask<2>\n\nStatus Code: -201003",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mDaqError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\andyb\\Documents\\Desktop_Rehab\\Python sensor\\Sensor_testing.ipynb Cell 5\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/andyb/Documents/Desktop_Rehab/Python%20sensor/Sensor_testing.ipynb#W3sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m sensor \u001b[39m=\u001b[39m ftsensor()\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/andyb/Documents/Desktop_Rehab/Python%20sensor/Sensor_testing.ipynb#W3sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m sensor\u001b[39m.\u001b[39;49mstart_task()\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/andyb/Documents/Desktop_Rehab/Python%20sensor/Sensor_testing.ipynb#W3sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m raw_voltage \u001b[39m=\u001b[39m sensor\u001b[39m.\u001b[39mread_raw_voltage()\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/andyb/Documents/Desktop_Rehab/Python%20sensor/Sensor_testing.ipynb#W3sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m avg_voltage \u001b[39m=\u001b[39m sensor\u001b[39m.\u001b[39mread_avg_voltage()\n",
+      "\u001b[1;32mc:\\Users\\andyb\\Documents\\Desktop_Rehab\\Python sensor\\Sensor_testing.ipynb Cell 5\u001b[0m in \u001b[0;36mftsensor.start_task\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/andyb/Documents/Desktop_Rehab/Python%20sensor/Sensor_testing.ipynb#W3sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtask \u001b[39m=\u001b[39m nidaqmx\u001b[39m.\u001b[39mTask()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/andyb/Documents/Desktop_Rehab/Python%20sensor/Sensor_testing.ipynb#W3sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mchannel_number):\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/andyb/Documents/Desktop_Rehab/Python%20sensor/Sensor_testing.ipynb#W3sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtask\u001b[39m.\u001b[39;49mai_channels\u001b[39m.\u001b[39;49madd_ai_voltage_chan(\u001b[39mf\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mDev1/ai\u001b[39;49m\u001b[39m{\u001b[39;49;00mi\u001b[39m}\u001b[39;49;00m\u001b[39m\"\u001b[39;49m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/andyb/Documents/Desktop_Rehab/Python%20sensor/Sensor_testing.ipynb#W3sZmlsZQ%3D%3D?line=29'>30</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtask\u001b[39m.\u001b[39mtiming\u001b[39m.\u001b[39mcfg_samp_clk_timing(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39msampling_freq, sample_mode \u001b[39m=\u001b[39m AcquisitionType\u001b[39m.\u001b[39mCONTINUOUS, samps_per_chan \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msample_number)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/andyb/Documents/Desktop_Rehab/Python%20sensor/Sensor_testing.ipynb#W3sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mreader \u001b[39m=\u001b[39m AnalogMultiChannelReader(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtask\u001b[39m.\u001b[39min_stream)\n",
+      "File \u001b[1;32mc:\\users\\andyb\\appdata\\local\\programs\\python\\python310\\lib\\site-packages\\nidaqmx\\_task_modules\\ai_channel_collection.py:2603\u001b[0m, in \u001b[0;36mAIChannelCollection.add_ai_voltage_chan\u001b[1;34m(self, physical_channel, name_to_assign_to_channel, terminal_config, min_val, max_val, units, custom_scale_name)\u001b[0m\n\u001b[0;32m   2594\u001b[0m             cfunc\u001b[39m.\u001b[39margtypes \u001b[39m=\u001b[39m [\n\u001b[0;32m   2595\u001b[0m                 lib_importer\u001b[39m.\u001b[39mtask_handle, ctypes_byte_str,\n\u001b[0;32m   2596\u001b[0m                 ctypes_byte_str, ctypes\u001b[39m.\u001b[39mc_int, ctypes\u001b[39m.\u001b[39mc_double,\n\u001b[0;32m   2597\u001b[0m                 ctypes\u001b[39m.\u001b[39mc_double, ctypes\u001b[39m.\u001b[39mc_int, ctypes_byte_str]\n\u001b[0;32m   2599\u001b[0m error_code \u001b[39m=\u001b[39m cfunc(\n\u001b[0;32m   2600\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_handle, physical_channel, name_to_assign_to_channel,\n\u001b[0;32m   2601\u001b[0m     terminal_config\u001b[39m.\u001b[39mvalue, min_val, max_val, units\u001b[39m.\u001b[39mvalue,\n\u001b[0;32m   2602\u001b[0m     custom_scale_name)\n\u001b[1;32m-> 2603\u001b[0m check_for_error(error_code)\n\u001b[0;32m   2605\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_create_chan(physical_channel, name_to_assign_to_channel)\n",
+      "File \u001b[1;32mc:\\users\\andyb\\appdata\\local\\programs\\python\\python310\\lib\\site-packages\\nidaqmx\\errors.py:183\u001b[0m, in \u001b[0;36mcheck_for_error\u001b[1;34m(error_code, samps_per_chan_written, samps_per_chan_read)\u001b[0m\n\u001b[0;32m    181\u001b[0m         \u001b[39mraise\u001b[39;00m DaqWriteError(error_buffer\u001b[39m.\u001b[39mvalue\u001b[39m.\u001b[39mdecode(\u001b[39m\"\u001b[39m\u001b[39mutf-8\u001b[39m\u001b[39m\"\u001b[39m), error_code, samps_per_chan_written)\n\u001b[0;32m    182\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m--> 183\u001b[0m         \u001b[39mraise\u001b[39;00m DaqError(error_buffer\u001b[39m.\u001b[39mvalue\u001b[39m.\u001b[39mdecode(\u001b[39m\"\u001b[39m\u001b[39mutf-8\u001b[39m\u001b[39m\"\u001b[39m), error_code)\n\u001b[0;32m    185\u001b[0m \u001b[39melif\u001b[39;00m error_code \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[0;32m    186\u001b[0m     error_buffer \u001b[39m=\u001b[39m ctypes\u001b[39m.\u001b[39mcreate_string_buffer(\u001b[39m2048\u001b[39m)\n",
+      "\u001b[1;31mDaqError\u001b[0m: Device cannot be accessed.  Possible causes:\nDevice is no longer present in the system.\nDevice is not powered.\nDevice is powered, but was temporarily without power.\nDevice and/or chassis driver support may have been removed.\nDevice is damaged.\nEnsure the device is properly connected and turned on. Ensure the device and/or chassis is supported in the current version of the driver. Check the device's status in NI MAX. Turn the computer off and on again. If you suspect that the device is damaged, contact National Instruments at ni.com/support.\nDevice Specified: Dev1\n\nTask Name: _unnamedTask<2>\n\nStatus Code: -201003"
+     ]
+    }
+   ],
    "source": [
     "sensor = ftsensor()\n",
     "sensor.start_task()\n",
