ready for the final testing of the library

--- a/Python sensor/Sensor_testing.ipynb
+++ b/Python sensor/Sensor_testing.ipynb
@@ -18,45 +18,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'asdth1'"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "class test:\n",
-    "    def __init__(self):\n",
-    "        pass\n",
-    "    def add(self):\n",
-    "        self.x = \"asdth1\"\n",
-    "x = test()\n",
-    "x.a = \"1\"\n",
-    "print(x.a)\n",
-    "x.a = 2\n",
-    "print(x.a)\n",
-    "x.add()\n",
-    "x.x"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -74,13 +35,7 @@
     "set_channel_number\n",
     "set_sampling_freq\n",
     "set_read_freq\n",
-    "\n",
-    "get_calibration_file_path\n",
-    "get_tool_offset\n",
-    "get_channel_number\n",
-    "get_sampling_freq\n",
-    "get_read_freq\n",
-    "get_sample_number"
+    "\n"
    ]
   },
   {
@@ -89,8 +44,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import nidaqmx \n",
-    "import atiiaftt as ati\n",
+    "from nidaqmx import Task\n",
+    "from atiiaftt import FTSensor\n",
     "import numpy as np\n",
     "from nidaqmx.stream_readers import AnalogMultiChannelReader\n",
     "from nidaqmx.constants import AcquisitionType\n",
@@ -108,7 +63,7 @@
     "        self.sample_number = self.sampling_freq//self.read_freq\n",
     "        self.raw_readings = np.zeros((self.channel_number, self.sample_number), dtype=np.float64)\n",
     "        \n",
-    "        self.sensor = ati.FTSensor()\n",
+    "        self.sensor = FTSensor()\n",
     "        self.calibrate(calibration_file_path=self.calibration_file_path)\n",
     "        self.set_tool(self.tool_offset)\n",
     "\n",
@@ -121,7 +76,7 @@
     "        self.sensor.setToolTransform(tool_offset, \"mm\".encode(\"utf-8\"), \"deg\".encode(\"utf-8\"))\n",
     "\n",
     "    def start_task(self):\n",
-    "        self.task = nidaqmx.Task()\n",
+    "        self.task = Task()\n",
     "        for i in range(self.channel_number):\n",
     "            self.task.ai_channels.add_ai_voltage_chan(f\"Dev1/ai{i}\")\n",
     "        self.task.timing.cfg_samp_clk_timing(self.sampling_freq, sample_mode = AcquisitionType.CONTINUOUS, samps_per_chan = self.sample_number)\n",
@@ -159,7 +114,25 @@
     "\n",
     "    def set_read_freq(self, freq):\n",
     "        self.set_read_freq = freq\n",
-    "        self.sample_number = self.sampling_freq//self.read_freq"
+    "        self.sample_number = self.sampling_freq//self.read_freq\n",
+    "\n",
+    "    def get_calibration_file_path(self):\n",
+    "        return self.calibration_file_path\n",
+    "    \n",
+    "    def get_tool_offset(self):\n",
+    "        return self.tool_offset\n",
+    "    \n",
+    "    def get_channel_number(self):\n",
+    "        return self.channel_number\n",
+    "    \n",
+    "    def get_sampling_freq(self):\n",
+    "        return self.sampling_freq\n",
+    "    \n",
+    "    def read_freq(self):\n",
+    "        return self.read_freq\n",
+    "    \n",
+    "    def get_sample_number(self):\n",
+    "        return self.sample_number\n"
    ]
   },
   {
