ready for the final testing again

--- a/Python sensor/Sensor_testing.ipynb
+++ b/Python sensor/Sensor_testing.ipynb
@@ -95,7 +95,7 @@
     "    \n",
     "    def read_raw_ft(self):\n",
     "        raw_voltage = self.read_raw_voltage()\n",
-    "        return [self.sensor.convertoFT([raw_voltage[i][j] for i in range(self.channel_number)]) for j in range(self.sample_number)]\n",
+    "        return [self.sensor.convertToFt([raw_voltage[i][j] for i in range(self.channel_number)]) for j in range(self.sample_number)]\n",
     "    \n",
     "    def read_ft(self):\n",
     "        avg_voltage = self.read_avg_voltage()\n",
