trying to change code

--- a/Main_Exp_Code.ipynb
+++ b/Main_Exp_Code.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,9 @@
     "import time\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import ftsensor\n",
+    "from pprint import pprint"
    ]
   },
   {
@@ -90,6 +92,32 @@
     "sensor.bias(bias)\n",
     "output = sensor.convertToFt(bias)\n",
     "output\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'ftsensor' object has no attribute 'get_bias'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\andyb\\Documents\\Desktop_Rehab\\Main_Exp_Code.ipynb Cell 4\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/andyb/Documents/Desktop_Rehab/Main_Exp_Code.ipynb#X31sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m sensor \u001b[39m=\u001b[39m ftsensor\u001b[39m.\u001b[39mftsensor()\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/andyb/Documents/Desktop_Rehab/Main_Exp_Code.ipynb#X31sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39m# sensor.start_task()\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/andyb/Documents/Desktop_Rehab/Main_Exp_Code.ipynb#X31sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m# sensor.bias()\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/andyb/Documents/Desktop_Rehab/Main_Exp_Code.ipynb#X31sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m# sensor.stop_task()\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/andyb/Documents/Desktop_Rehab/Main_Exp_Code.ipynb#X31sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m sensor\u001b[39m.\u001b[39;49mget_bias()\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'ftsensor' object has no attribute 'get_bias'"
+     ]
+    }
+   ],
+   "source": [
+    "sensor = ftsensor.ftsensor()\n",
+    "# sensor.start_task()\n",
+    "# sensor.bias()\n",
+    "# sensor.stop_task()\n",
+    "sensor.get_bias()\n",
+    "# pprint(ftsensor.convertToFt(sensor.get_bias()))"
    ]
   },
   {
@@ -873,7 +901,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
