test graph for reading 5 seconds

--- a/Main_Exp_Code.ipynb
+++ b/Main_Exp_Code.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,82 +21,21 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import ftsensor\n",
-    "from pprint import pprint"
+    "import ftsensor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "CALFILEPATH = \"FT44764\\FT44764.cal\"\n",
-    "INDEX = 1\n",
-    "\n",
-    "read_task = nidaqmx.Task()\n",
-    "read_task.ai_channels.add_ai_voltage_chan(\"Dev1/ai0\")\n",
-    "read_task.ai_channels.add_ai_voltage_chan(\"Dev1/ai1\")\n",
-    "read_task.ai_channels.add_ai_voltage_chan(\"Dev1/ai2\")\n",
-    "read_task.ai_channels.add_ai_voltage_chan(\"Dev1/ai3\")\n",
-    "read_task.ai_channels.add_ai_voltage_chan(\"Dev1/ai4\")\n",
-    "read_task.ai_channels.add_ai_voltage_chan(\"Dev1/ai5\")\n",
-    "reader = AnalogMultiChannelReader(read_task.in_stream,)\n",
-    "values_read = np.zeros(6, dtype=np.float64)\n",
-    "\n",
-    "transform = [0,0,0,0,0,0]\n",
-    "bias_val = list()\n",
-    "\n",
-    "#Bias\n",
-    "sensor = ati.FTSensor()\n",
-    "cal = sensor.createCalibration(CALFILEPATH, INDEX)\n",
-    "sensor.setForceUnits(\"N\".encode(\"utf-8\"))\n",
-    "sensor.setTorqueUnits(\"N-m\".encode(\"utf-8\"))\n",
-    "sensor.setToolTransform(transform, \"mm\".encode(\"utf-8\"), \"deg\".encode(\"utf-8\"))\n",
-    "\n",
-    "current_time = time.time()\n",
-    "while time.time() < current_time+0.1:\n",
-    "    reader.read_one_sample(values_read)   \n",
-    "    bias_val.append(sensor.convertToFt(values_read.tolist()))\n",
-    "\n",
-    "bias = np.array([0,0,0,0,0,0])\n",
-    "for data in bias_val:\n",
-    "    bias = bias + np.array(data)\n",
-    "\n",
-    "bias = [i/len(bias_val) for i in bias]\n",
-    "print(bias)\n",
-    "\n",
-    "sensor.bias(bias)\n",
-    "output = sensor.convertToFt(bias)\n",
-    "output\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-0.13027634931169493, -0.08792700017752128, 0.1334780988998222, -0.15415363322295272, 0.06479128196797991, -0.06249504154897219]\n"
+      "Current Bias (in Voltages) is:  [0, 0, 0, 0, 0, 0]\n",
+      "Current Bias (in FT) is:  [0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[-1.2560036182403564,\n",
-       " -0.3692203760147095,\n",
-       " -1.7501468658447266,\n",
-       " 0.044478889554739,\n",
-       " 0.20587901771068573,\n",
-       " -0.13446815311908722]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -104,8 +43,8 @@
     "sensor.start_task()\n",
     "sensor.set_bias()\n",
     "sensor.stop_task()\n",
-    "print(sensor.get_bias())\n",
-    "sensor.convertToFt([0,0,0,0,0,0])"
+    "print(\"Current Bias (in Voltages) is: \", sensor.get_bias())\n",
+    "print(\"Current Bias (in FT) is: \", sensor.convertToFt(sensor.get_bias()))"
    ]
   },
   {
@@ -144,6 +83,46 @@
     "\n",
     "print(\"Number of Data\", len(Test_readings))\n",
     "plt.plot(range(len(Test_readings)), [data[0] for data in Test_readings])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "duration = 5\n",
+    "readings = np.array([])\n",
+    "sensor.start_task()\n",
+    "current_time = time.time()\n",
+    "\n",
+    "while time.time()< current_time + duration:\n",
+    "    readings = np.append(readings, np.array(sensor.read_ft), axis=0)\n",
+    "\n",
+    "sensor.stop_task()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'readings' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\andyb\\Documents\\Desktop_Rehab\\Main_Exp_Code.ipynb Cell 7\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/andyb/Documents/Desktop_Rehab/Main_Exp_Code.ipynb#X33sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m plt\u001b[39m.\u001b[39mplot(\u001b[39mrange\u001b[39m(readings\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m]), readings\u001b[39m.\u001b[39mtranspose()[\u001b[39m0\u001b[39m], label\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mForce X\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/andyb/Documents/Desktop_Rehab/Main_Exp_Code.ipynb#X33sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m plt\u001b[39m.\u001b[39mgrid()\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/andyb/Documents/Desktop_Rehab/Main_Exp_Code.ipynb#X33sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m plt\u001b[39m.\u001b[39mlegend()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'readings' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "plt.plot(range(readings.shape[0]), readings.transpose()[0], label=\"Force X\")\n",
+    "plt.grid()\n",
+    "plt.legend()"
    ]
   },
   {
@@ -654,7 +633,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
