--- a/Main_Exp_Code.ipynb
+++ b/Main_Exp_Code.ipynb
@@ -336,18 +336,9 @@
     "\n",
     "\n",
     "##Sensor\n",
-    "\n",
-    "with nidaqmx.Task() as task:\n",
-    "    task.ai_channels.add_ai_voltage_chan(\"Dev1/ai0\")\n",
-    "    task.ai_channels.add_ai_voltage_chan(\"Dev1/ai1\")\n",
-    "    task.ai_channels.add_ai_voltage_chan(\"Dev1/ai2\")\n",
-    "    task.ai_channels.add_ai_voltage_chan(\"Dev1/ai3\")\n",
-    "    task.ai_channels.add_ai_voltage_chan(\"Dev1/ai4\")\n",
-    "    task.ai_channels.add_ai_voltage_chan(\"Dev1/ai5\")\n",
-    "    \n",
-    "    bias = task.read()\n",
-    "\n",
-    "sensor.bias(bias)"
+    "sensor.start_task()\n",
+    "sensor.set_bias()\n",
+    "sensor.stop_task()"
    ]
   },
   {
@@ -383,6 +374,7 @@
     "record_duration = 20\n",
     "\n",
     "print(\"Start Controling\")\n",
+    "sensor.start_task()\n",
     "while time < record_duration:\n",
     "    start_time = dt.datetime.today().timestamp()\n",
     "\n",
@@ -474,15 +466,7 @@
     "\n",
     "\n",
     "    #Sensor\n",
-    "    with nidaqmx.Task() as task:\n",
-    "        task.ai_channels.add_ai_voltage_chan(\"Dev1/ai0\")\n",
-    "        task.ai_channels.add_ai_voltage_chan(\"Dev1/ai1\")\n",
-    "        task.ai_channels.add_ai_voltage_chan(\"Dev1/ai2\")\n",
-    "        task.ai_channels.add_ai_voltage_chan(\"Dev1/ai3\")\n",
-    "        task.ai_channels.add_ai_voltage_chan(\"Dev1/ai4\")\n",
-    "        task.ai_channels.add_ai_voltage_chan(\"Dev1/ai5\")\n",
-    "        reading = sensor.convertToFt(task.read())\n",
-    "\n",
+    "    reading = sensor.read_ft()\n",
     "  \n",
     "    #print(reading)\n",
     "    \n",
@@ -504,6 +488,7 @@
     "ser.write(bytes([0x02])+EXIT)\n",
     "receive()\n",
     "    \n",
+    "sensor.stop_task()\n",
     "\n",
     "print(\"finish\")\n",
     "# print(logs)\n"
