64 hz with fast 0 torque

--- a/Main_Exp_Code.ipynb
+++ b/Main_Exp_Code.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,20 +26,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current Bias (in Voltages) is:  [-0.12760907483561484, -0.0854898050032672, 0.13742559811339158, -0.16393528359535064, 0.0672054687602628, -0.06917883956214867]\n",
+      "Current Bias (in Voltages) is:  [-0.12687775189150602, -0.08265325823782285, 0.139897304526546, -0.17368899596805168, 0.06874864193496436, -0.0776506810067319]\n",
       "Current Bias (in FT) is:  [0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n"
      ]
     }
    ],
    "source": [
-    "sensor = ftsensor.ftsensor()\n",
+    "sensor = ftsensor.ftsensor(tool_offset=[0,0,52,0,0,180])\n",
     "sensor.start_task()\n",
     "sensor.set_bias()\n",
     "sensor.stop_task()\n",
@@ -472,8 +472,8 @@
     "    \n",
     "    readings.append(reading)\n",
     "\n",
-    "    log.append(-reading[0])\n",
-    "    log.append(-reading[1])\n",
+    "    log.append(reading[0])\n",
+    "    log.append(reading[1])\n",
     "\n",
     "    logs.append(log)\n",
     "    \n",
