--- a/Main_Exp_Code.ipynb
+++ b/Main_Exp_Code.ipynb
@@ -269,7 +269,9 @@
     "values = [ft.mean() for ft in values.transpose()]\n",
     "sensor.set_bias(values)\n",
     "sensor.stop_task()\n",
-    "print(values)"
+    "print(values)\n",
+    "\n",
+    "session_parameters = [q1, q2]"
    ]
   },
   {
@@ -1575,6 +1577,7 @@
    ],
    "source": [
     "def record_session(T1, T2):\n",
+    "    global dT, q1_old, q2_old\n",
     "    start_time = dt.datetime.today().timestamp()\n",
     "    t = 0\n",
     "    l1 = 0.275\n",
