hopefully its done

--- a/Main_Exp_Code.ipynb
+++ b/Main_Exp_Code.ipynb
@@ -1577,7 +1577,7 @@
    ],
    "source": [
     "def record_session(T1, T2):\n",
-    "    global dT, q1_old, q2_old\n",
+    "    global dT, q1_old, q2_old, q1, q2\n",
     "    start_time = dt.datetime.today().timestamp()\n",
     "    t = 0\n",
     "    l1 = 0.275\n",
@@ -1687,8 +1687,8 @@
     "        \n",
     "        readings.append(reading)\n",
     "\n",
-    "        log.append(reading[0])\n",
-    "        log.append(reading[1])\n",
+    "        log.append(-reading[0])\n",
+    "        log.append(-reading[1])\n",
     "\n",
     "        logs.append(log)\n",
     "        \n",
@@ -1715,7 +1715,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logs = record_session(0,0)"
+    "Folder = \"Y025\"\n",
+    "torque_mag = 3\n",
+    "torque_settings = [[0, torque_mag], [torque_mag, 0], [torque_mag, torque_mag],\n",
+    "                   [0, -torque_mag], [-torque_mag, 0], [-torque_mag, -torque_mag]]\n",
+    "logs = []\n",
+    "\n",
+    "for session in torque_settings:\n",
+    "    log = record_session(session[0], session[1])\n",
+    "    logs.append(log)\n",
+    "    log_COLUMNS = [\"Time\", \"T1\", \"T2\", \"t1\", \"t2\", \"q1\", \"q2\", \"x\", \"y\", \"x_dot\", \"y_dot\", \"Fx\", \"Fy\", \"Fx_Mea\", \"Fy_Mea\"]\n",
+    "\n",
+    "    log_arrays = np.array([np.array(item) for item in log])\n",
+    "\n",
+    "    log_arrays_transpose = log_arrays.transpose()\n",
+    "    df_log = pd.DataFrame([])\n",
+    "    for i in range(len(log_COLUMNS)):\n",
+    "        df_log[log_COLUMNS[i]] = log_arrays_transpose[i]\n",
+    "\n",
+    "    # print(df_log)\n",
+    "    df_log.to_csv(f\"Joey/{Folder}/T{session[0]}{session[1]}.csv\")"
    ]
   },
   {
@@ -1757,15 +1776,6 @@
    "metadata": {},
    "source": [
     "# Data visualize"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 450,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_log.to_csv(f\"Joey/Y022/T{T1}{T2}.csv\")"
    ]
   },
   {
