--- a/Main_Exp_Code.ipynb
+++ b/Main_Exp_Code.ipynb
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,14 +198,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x:  0.3046525491557915 \ty:  0.10030854208572249\n"
+      "x:  0.2953262020700467 \ty:  0.10018091889106343\n"
      ]
     }
    ],
@@ -260,14 +260,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\nidaqmx\\task.py:456: ResourceWarning: Attempted to close NI-DAQmx task of name \"_unnamedTask<8>\" but task was already closed.\n",
+      "c:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\nidaqmx\\task.py:456: ResourceWarning: Attempted to close NI-DAQmx task of name \"_unnamedTask<37>\" but task was already closed.\n",
       "  warnings.warn(\n"
      ]
     }
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
      "output_type": "stream",
      "text": [
       "Starting Enter Motors\n",
-      "[-0.23910608462383232, -0.7079228828303238, -0.09623632572302582, 0.031701998476954915, 0.44158675760102484, 0.37804750688648997]\n"
+      "[-0.27557367312062764, 0.5819670590405007, 0.7295801123569253, -0.38985270232396474, -0.46174190470266024, -0.5615560010379527]\n"
      ]
     }
    ],
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,8 +363,6 @@
     "    l2 = 0.24\n",
     "\n",
     "    logs = list()\n",
-    "    motor_logs = list()\n",
-    "    readings = list()\n",
     "\n",
     "    t_mapping = 1/1.35\n",
     "\n",
@@ -485,14 +483,10 @@
     "        log.append(Fx)\n",
     "        log.append(Fy)\n",
     "\n",
-    "        motor_logs.append(log)\n",
     "\n",
     "        #Sensor\n",
     "        reading = sensor.read_ft()\n",
     "    \n",
-    "        #print(reading)\n",
-    "        \n",
-    "        readings.append(reading)\n",
     "\n",
     "        log.append(-reading[0])\n",
     "        log.append(-reading[1])\n",
@@ -505,12 +499,12 @@
     "    sensor.stop_task()\n",
     "\n",
     "    print(f\"finishing T1 = {T1} and T2 = {T2}\")\n",
-    "    return log\n"
+    "    return logs\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -544,14 +538,13 @@
     "torque_mag = 3\n",
     "torque_settings = [[0, torque_mag], [torque_mag, 0], [torque_mag, torque_mag],\n",
     "                   [0, -torque_mag], [-torque_mag, 0], [-torque_mag, -torque_mag]]\n",
-    "logs = []\n",
+    "\n",
     "\n",
     "for session in torque_settings:\n",
-    "    log = record_session(session[0], session[1])\n",
-    "    logs.append(log)\n",
+    "    logs = record_session(session[0], session[1])\n",
     "    log_COLUMNS = [\"Time\", \"T1\", \"T2\", \"t1\", \"t2\", \"q1\", \"q2\", \"x\", \"y\", \"x_dot\", \"y_dot\", \"Fx\", \"Fy\", \"Fx_Mea\", \"Fy_Mea\"]\n",
     "\n",
-    "    log_arrays = np.array([np.array(item) for item in log])\n",
+    "    log_arrays = np.array([np.array(item) for item in logs])\n",
     "\n",
     "    log_arrays_transpose = log_arrays.transpose()\n",
     "    df_log = pd.DataFrame([])\n",
