--- a/Main_Exp_Code.ipynb
+++ b/Main_Exp_Code.ipynb
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -193,19 +193,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Test Motor"
+    "# Test Motor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x:  0.2953262020700467 \ty:  0.10018091889106343\n"
+      "x:  0.24 \ty:  0.275\n"
      ]
     }
    ],
@@ -260,14 +260,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\nidaqmx\\task.py:456: ResourceWarning: Attempted to close NI-DAQmx task of name \"_unnamedTask<37>\" but task was already closed.\n",
+      "c:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\nidaqmx\\task.py:456: ResourceWarning: Attempted to close NI-DAQmx task of name \"_unnamedTask<0>\" but task was already closed.\n",
       "  warnings.warn(\n"
      ]
     }
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
      "output_type": "stream",
      "text": [
       "Starting Enter Motors\n",
-      "[-0.27557367312062764, 0.5819670590405007, 0.7295801123569253, -0.38985270232396474, -0.46174190470266024, -0.5615560010379527]\n"
+      "[-0.1394229490377093, -0.09486828561335982, 0.14472636699098634, -0.14529768045526126, 0.048787453672358795, -0.05241057905848562]\n"
      ]
     }
    ],
@@ -414,8 +414,8 @@
     "        q1_old = q1\n",
     "        q2_old = q2\n",
     "\n",
-    "        x_old = x\n",
-    "        y_old = y\n",
+    "        # x_old = x\n",
+    "        # y_old = y\n",
     "        \n",
     "        log.append(T1)\n",
     "        log.append(T2)\n",
@@ -469,7 +469,7 @@
     "\n",
     "\n",
     "        x_dot = l1*np.cos(q1)*vel1 - l2*np.sin(q2)*vel2\n",
-    "        y_dot = -l1*np.cos(q1)*vel1 - l2*np.cos(q2)*vel2\n",
+    "        y_dot = -l1*np.sin(q1)*vel1 - l2*np.cos(q2)*vel2\n",
     "        \n",
     "\n",
     "        log.append(x_dot)\n",
@@ -577,16 +577,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2, 0.512, 0, 2.2283272283272275)"
+       "(2, -0.0, -0.012, 0.006105006105006083)"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
