--- a/Main_Exp_Code.ipynb
+++ b/Main_Exp_Code.ipynb
@@ -198,14 +198,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x:  0.24 \ty:  0.275\n"
+      "x:  0.2528040115618079 \ty:  0.10235986088027058\n"
      ]
     }
    ],
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
      "output_type": "stream",
      "text": [
       "Starting Enter Motors\n",
-      "[-0.1394229490377093, -0.09486828561335982, 0.14472636699098634, -0.14529768045526126, 0.048787453672358795, -0.05241057905848562]\n"
+      "[-0.2027569929307051, -0.08066946501390967, 0.1139888115375622, -0.12918329084436453, 0.11681534059361733, -0.11090733896630664]\n"
      ]
     }
    ],
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,38 +504,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting T1 = 0 and T2 = 3\n",
+      "Starting T1 = 0 and T2 = 1\n",
       "Start Controling\n",
-      "finishing T1 = 0 and T2 = 3\n",
-      "Starting T1 = 3 and T2 = 0\n",
+      "finishing T1 = 0 and T2 = 1\n",
+      "Starting T1 = 1 and T2 = 0\n",
       "Start Controling\n",
-      "finishing T1 = 3 and T2 = 0\n",
-      "Starting T1 = 3 and T2 = 3\n",
+      "finishing T1 = 1 and T2 = 0\n",
+      "Starting T1 = 1 and T2 = 1\n",
       "Start Controling\n",
-      "finishing T1 = 3 and T2 = 3\n",
-      "Starting T1 = 0 and T2 = -3\n",
+      "finishing T1 = 1 and T2 = 1\n",
+      "Starting T1 = 0 and T2 = -1\n",
       "Start Controling\n",
-      "finishing T1 = 0 and T2 = -3\n",
-      "Starting T1 = -3 and T2 = 0\n",
+      "finishing T1 = 0 and T2 = -1\n",
+      "Starting T1 = -1 and T2 = 0\n",
       "Start Controling\n",
-      "finishing T1 = -3 and T2 = 0\n",
-      "Starting T1 = -3 and T2 = -3\n",
+      "finishing T1 = -1 and T2 = 0\n",
+      "Starting T1 = -1 and T2 = -1\n",
       "Start Controling\n",
-      "finishing T1 = -3 and T2 = -3\n",
+      "finishing T1 = -1 and T2 = -1\n",
       "End all session\n"
      ]
     }
    ],
    "source": [
-    "Folder = \"Y010\"\n",
-    "torque_mag = 3\n",
+    "Folder = \"X025\"\n",
+    "torque_mag = 1\n",
     "torque_settings = [[0, torque_mag], [torque_mag, 0], [torque_mag, torque_mag],\n",
     "                   [0, -torque_mag], [-torque_mag, 0], [-torque_mag, -torque_mag]]\n",
     "\n",
